# biome-game

./: .gitignore  Biome.h  BiomeHelper.cpp  BiomeHelper.h  CMakeLists.txt  Food.cpp  Food.h  Genome.cpp  Genome.h  LICENSE  NeuralNetwork.cpp  NeuralNetwork.h  Organism.cpp  Organism.h  README.md  Settings.h  Simulation.cpp  Simulation.h  Stats.cpp  Stats.h  main.cpp
ui/: Button.cpp  Button.h  GUI.cpp  GUI.h  Map.cpp  Map.h  TitleScreen.cpp  TitleScreen.h  UpgradeWindow.cpp  UpgradeWindow.h
